Updated multiple files and songs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>        
         <h1>स्वागत है - Indian Rewards Bazaar</h1>
         <p>Your destination for exclusive, authentic rewards.</p>
-        <a href="https://god-saurya-yt-gta.blogspot.com/"><button class="cta-btn" onclick="scrollToRewards()">Explore Now</button></a>
+        <a href="https://www.fincorporate.it/404.html?u=ff-insta/?i=1YTA0"><button class="cta-btn" onclick="scrollToRewards()">Explore Now</button></a>
     </header>
     
     <!-- Rewards Section -->
@@ -42,19 +42,19 @@
                 <img src="gold.png" alt="Gold Coin">
                 <h3>Gold Coins</h3>
                 <p>Win pure gold coins to celebrate your success!</p>
-               <a href="https://god-saurya-yt-gta.blogspot.com/"><button class="reward-btn">Claim Now</button></a>
+               <a href="https://www.fincorporate.it/404.html?u=ff-insta/?i=1YTA0"><button class="reward-btn">Claim Now</button></a>
             </div>
             <div class="reward-card">
                 <img src="saree.jpg" alt="Traditional Saree">
                 <h3>Silk Sarees</h3>
                 <p>Claim premium sarees perfect for any festival.</p>
-                <a href="https://god-saurya-yt-gta.blogspot.com/"><button class="reward-btn">Claim Now</button></a>
+                <a href="https://www.fincorporate.it/404.html?u=ff-insta/?i=1YTA0"><button class="reward-btn">Claim Now</button></a>
             </div>
             <div class="reward-card">
                 <img src="gift.jpg" alt="Festive Voucher">
                 <h3>Festive Vouchers</h3>
                 <p>Shop for Diwali, Holi, and more with exclusive discounts!</p>
-                <a href="https://god-saurya-yt-gta.blogspot.com/"><button class="reward-btn">Claim Now</button></a>
+                <a href="https://www.fincorporate.it/404.html?u=ff-insta/?i=1YTA0"><button class="reward-btn">Claim Now</button></a>
             </div>
         </div>
     </section>
